# external_marketing_flow

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  prd.md  pyproject.toml  requirements.txt
api/: dependencies.py  main.py  schemas.py
api/routes/: __init__.py  auth.py  carousel.py  creative.py  events.py  memory.py  pipeline.py
carousel_renderer/: package-lock.json  package.json  server.js
config/: content_mix.yaml  llm_config.yaml  pipeline_config.yaml  platform_rules.yaml
data/brand/: brand_dna.md  content_pillars.md  platform_rules.md  style_guide.md
docs/: PROJECT_DOCUMENTATION.md  SETUP.md  api.md  pipeline_architecture.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
prompts/: README.md  _global_context.md
prompts/content/: caption_writer.md  image_prompt_engineer.md  react_code_generator.md  script_writer.md  slide_content_writer.md  theme_designer.md
prompts/editing/: chat_edit_agent.md
prompts/research/: deep_research_parser.md  deep_research_prompt_generator.md  research_parser.md  research_prompt_generator.md
prompts/scoring/: calendar_planner.md  topic_scorer.md
scratch/: check_backticks.py  check_tags.py  delete_legacy.py  find_mode_conditions.py  find_unclosed_div.py  test_parse.py
scripts/: e2e_test.py  export_project_docs_pdf.py  fire_event.py  poll_state.py  run_node.py  test_deep_loop.py  test_full_api.py  test_parser.py  test_topic_stability.py
src/contentforge/: __init__.py
tests/api/: test_pipeline_routes.py
(+71 files in other folders)
