[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contentforge"
version = "0.1.0"
description = "AI Marketing Content Pipeline — Event-driven agentic content creation"
requires-python = ">=3.12"

dependencies = [
    # ── LangChain / LangGraph ──
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",
    # ── API Server ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    # ── Data & Config ──
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "aiosqlite>=0.20.0",
    # ── Utilities ──
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
